# BlightspireEngine

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
engine/: CMakeLists.txt  main.cpp
engine/application/: CMakeLists.txt
engine/application/private/: application_module.cpp
engine/application/private/input/: action_manager.cpp  input_device_manager.cpp
engine/application/public/: application_module.hpp  imgui_include.hpp  imgui_sdl_include.hpp
engine/application/public/input/: action_manager.hpp  input_device_manager.hpp
engine/audio/: CMakeLists.txt
engine/audio/private/: audio_listener_component.cpp  audio_module.cpp  audio_system.cpp  fmod_debug.cpp  fmod_debug.hpp
engine/audio/public/: audio_common.hpp  audio_emitter_component.hpp  audio_listener_component.hpp  audio_module.hpp  audio_system.hpp
engine/bindings/: CMakeLists.txt
engine/bindings/private/: wren_bindings.cpp
engine/bindings/private/audio/: audio_bindings.cpp  audio_bindings.hpp
engine/bindings/private/entity/: entity_bind.cpp  entity_bind.hpp
engine/bindings/private/game/: game_bindings.cpp  game_bindings.hpp  wren_tracy_zone.hpp
engine/bindings/private/input/: input_bindings.cpp  input_bindings.hpp
engine/bindings/private/particles/: particle_bindings.cpp  particle_bindings.hpp
engine/bindings/public/: wren_bindings.hpp
engine/bindings/tests/: foreign_data_tests.cpp  main_script_tests.cpp
engine/core/: CMakeLists.txt
engine/core/private/: engine.cpp  main_engine.cpp  time_module.cpp
engine/core/public/: engine.hpp  main_engine.hpp  module_interface.hpp  time_module.hpp
engine/core/tests/: engine_module_tests.cpp
engine/ecs/: CMakeLists.txt
engine/ecs/private/: ecs_module.cpp
engine/ecs/public/: ecs_module.hpp  system_interface.hpp
engine/game/: CMakeLists.txt
engine/game/private/: aim_assist.cpp  game_module.cpp  game_settings.cpp  input_bindings_visualization_cache.cpp  serialization.hpp
engine/game/public/: aim_assist.hpp  cheats_component.hpp  game_module.hpp  game_settings.hpp  input_bindings_visualization_cache.hpp
engine/inspector/: CMakeLists.txt
engine/inspector/private/: editor.cpp  editor.hpp  imgui_backend.cpp  imgui_backend.hpp  inspector_module.cpp
engine/inspector/public/: inspector_module.hpp
engine/particles/: CMakeLists.txt
engine/particles/private/: emitter_component.cpp  particle_module.cpp
engine/particles/public/: emitter_component.hpp  particle_module.hpp  particle_util.hpp
engine/pathfinding/: CMakeLists.txt
engine/pathfinding/private/: pathfinding_module.cpp
engine/pathfinding/public/: pathfinding_module.hpp
engine/physics/: CMakeLists.txt
engine/physics/private/: physics_module.cpp
engine/physics/public/: physics_module.hpp
engine/reflection/: CMakeLists.txt
engine/reflection/private/: impls.hpp  instance.hpp  names.cpp  names.hpp  reflect.cpp  reflection.cpp  type_registry.cpp  type_registry.hpp  types.cpp  types.hpp
engine/reflection/public/: reflect.hpp  reflect_fwd.hpp  reflect_macros.hpp  reflection.hpp  reflection_fwd.hpp  reflection_macros.hpp
engine/reflection/tests/: type_registry_tests.cpp
engine/renderer/: CMakeLists.txt
engine/renderer/private/: animation.cpp  animation_system.cpp  batch_buffer.cpp  bloom_settings.cpp  camera.cpp  camera_batch.cpp  draw_stats.cpp  frame_graph.cpp  gbuffers.cpp  gpu_scene.cpp  graphics_context.cpp  graphics_resources.cpp  mesh_primitives.cpp  pipeline_builder.cpp  renderer.cpp  renderer_module.cpp  single_time_commands.cpp  swap_chain.cpp  vulkan_context.cpp  vulkan_helper.cpp  vulkan_validation.cpp
engine/renderer/public/: animation.hpp  animation_system.hpp  batch_buffer.hpp  bloom_settings.hpp  camera.hpp  camera_batch.hpp  constants.hpp  cpu_resources.hpp  draw_stats.hpp  frame_graph.hpp  gbuffers.hpp  gpu_scene.hpp  graphics_context.hpp  graphics_resources.hpp  mesh_primitives.hpp  pipeline_builder.hpp  renderer.hpp  renderer_module.hpp  single_time_commands.hpp  swap_chain.hpp  vertex.hpp  vma_include.hpp  vulkan_context.hpp  vulkan_fwd.hpp  vulkan_helper.hpp  vulkan_include.hpp  vulkan_validation.hpp
engine/resources/: CMakeLists.txt
engine/resources/private/: model_loading.cpp
engine/resources/public/: model_loading.hpp  resource_manager.hpp
engine/scripting/: CMakeLists.txt
engine/scripting/private/: main_script.cpp  scripting_context.cpp  scripting_module.cpp
engine/scripting/public/: callback.hpp  main_script.hpp  scripting_context.hpp  scripting_module.hpp  wren_engine.hpp  wren_include.hpp
engine/scripting/tests/: scripting_tests.cpp
engine/scripting2/: CMakeLists.txt
engine/scripting2/private/: test.cpp
engine/scripting2/tests/: angel_script_tests.cpp  script.as
engine/settings/: CMakeLists.txt
engine/settings/public/: data_store.hpp  emitter_preset_settings.hpp  settings.hpp
engine/steam/: CMakeLists.txt
engine/steam/private/: achievements.cpp  steam_module.cpp  steam_stats.cpp
engine/steam/public/: achievements.hpp  steam_module.hpp  steam_stats.hpp
engine/thread/: CMakeLists.txt
engine/thread/private/: thread_pool.cpp
engine/thread/public/: thread_module.hpp  thread_pool.hpp
engine/thread/tests/: thread_pool_tests.cpp
engine/user_interface/: CMakeLists.txt
engine/user_interface/private/: fonts.cpp  ui_button.cpp  ui_element.cpp  ui_image.cpp  ui_input.cpp  ui_module.cpp  ui_progress_bar.cpp  ui_slider.cpp  ui_text.cpp  ui_toggle.cpp  viewport.cpp
engine/user_interface/public/: fonts.hpp  quad_draw_info.hpp  ui_button.hpp  ui_element.hpp  ui_image.hpp  ui_input.hpp  ui_module.hpp  ui_navigation.hpp  ui_progress_bar.hpp  ui_slider.hpp  ui_text.hpp  ui_toggle.hpp  viewport.hpp
engine/utility/: CMakeLists.txt
engine/utility/private/: assert.cpp  file_io.cpp  log_setup.cpp  new_override.cpp  physfs.cpp  time.cpp  timers.cpp
engine/utility/public/: bytes.hpp  colors.hpp  common.hpp  enum_utils.hpp  file_io.hpp  log_setup.hpp  math.hpp  perlin_noise.hpp  physfs.hpp  serialization.hpp  serialization_helpers.hpp  slot_map.hpp  time.hpp
tests/: CMakeLists.txt
(+227 files in other folders)
