add_library(Engine INTERFACE)

if (ENABLE_PCH)
    add_subdirectory(pch)
endif ()

# ENGINE MODULES
message(STATUS "### Linking Engine Modules:")

target_add_module(Engine core)
target_add_module(Engine utility)
target_add_module(Engine application)
target_add_module(Engine particles)
target_add_module(Engine scripting)
target_add_module(Engine renderer)
target_add_module(Engine physics)
target_add_module(Engine pathfinding)
target_add_module(Engine steam)
target_add_module(Engine audio)
target_add_module(Engine user_interface)
target_add_module(Engine bindings)
target_add_module(Engine inspector)
target_add_module(Engine game)
target_add_module(Engine ecs)
target_add_module(Engine resources)
target_add_module(Engine thread)
target_add_module(Engine settings)
